2014-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier.spec.in: Update to use systemd macros.

2014-01-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Factored out the unicode library into a separate package.

4.15.0

2013-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3login.c (starttls): Clear input buffer after STARTTLS.

	* imaplogin.c (starttls): Clear input buffer after STARTTLS.

	* Fix various compiler warnings about unchecked results from setuid
	and setgid calls.

2013-11-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriergnutls.c, libs/tcpd/libcouriertls.c: remove the
	TLS_DHCERTFILE setting, and use TLS_CERTFILE for all functionality.
	Read DH parameters from TLS_CERTFILE, or from the new TLS_DHPARAMS
	environment variable.

	* mkdhparams: New script that generates DH parameters into a standalone
	file.

	* Remove TLS_DHCERTFILE setting from imapd-ssl, pop3d-ssl, esmtpd and
	esmtpd-ssl. Add TLS_DHPARAMS.

	* Update imapd.cnf.openssl, pop3d.cnf.openssl, esmtpd.cnf.openssl,
	set default number of bits for RSA keys to 4096.

2013-10-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriertls.c (tls_create): Add TLSv1_1_method() and
	TLSv1_2 method(), based on patch by Rob Austein <sra@hactrn.net>.

	* pop3d-ssl.dist.in, imapd-ssl.dist.in: Fix up differences in the
	documentation of TLS options in various config files.

4.14.0

2013-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Autotool chain update.

	* imapd.c (mddelete): Reject DELETE folder if the maildir is a symlink.

2013-04-27  Rolf Eike Beer <dakon@users.sf.net>

	* imapd.c (doId): Implement the IMAP ID EXTENSION.

4.13.0

2013-03-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap: add explicit mkdirs on PIDFILE directories to startup scripts.

2013-02-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc822: workaround for invalid utf-8 input making libidn go off the
	rails.

4.12.0

2013-01-12 Gordon Messmer <yinyang@eburg.com>
